# django-sspanel

./: Makefile  README.md  pyproject.toml
.github/: dependabot.yml
apps/: constants.py  sub.py  tianyi.py  urls.py
apps/api/: views.py
apps/proxy/: admin.py  models.py
apps/sspanel/: models.py  views.py
configs/: development.py
configs/default/: common.py  db.py  sentry.py
templates/: base.html  basehead.html
templates/admin/: home.html
templates/admin/includes/: fieldset.html
templates/clash/: direct_ip.yaml  main.yaml
templates/web/: announcement.html  charge_center.html  node_occupancy.html  shop.html  user_info.html
