[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true


[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.djlint]
format_js = true
format_css = true
ignore = "T002,H020,H031,H021,H006,H030,D004,D018"

[tool.djlint.js]
templating = "django"

[tool.poetry]
authors = ["Ehco1996 <zh19960202@gmail.com>"]
description = "django sspanel"
license = "GPL-3.0 License"
name = "django-sspanel"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
aiohttp = "^3.9.3"
Django = "^5.1"
Markdown = "^3.3.4"
PyMySQL = "^1.1.0"
celery = "^5.3.4"
django-anymail = "^11.1"
django-cors-headers = "^4.2.0"
django-countries = "^7.1"
django-debug-toolbar = "^4.2.0"
django-prometheus = "^2.1.0"
django-simpleui = "^2024.4.1"
django-telegram-login = "^0.2.3"
ipicn = "^2021.5.5"
ipython = "^8.19.0"
pendulum = "^3.0.0"
python = "^3.11"
python-alipay-sdk = "^3.0.1"
python-slugify = "^8.0.4"
redis = "^5.0.8"
sentry-sdk = "^2.13.0"
short_url = "^1.2.2"
tomd = "^0.1.3"
uWSGI = "^2.0.24"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
black = "^24.8.0"
isort = "^5.12.0"
djlint = "^1.34.1"
ruff = "^0.6.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
